--- a/main.css
+++ b/main.css
@@ -1,14 +1,35 @@
-table {
-  width: 100%;
-  border-collapse: collapse;
+/* header {
+  display: flex;
+  align-items: center;
+  background-color: #2e8b57; /* Green background (SeaGreen) */
+  padding: 15px;
+  border-bottom: 2px solid #ddd;
+  color: white; /* Makes the text white for better contrast */
 }
 
-th, td {
-  border: 1px solid black;
-  padding: 10px;
-  text-align: center;
+/* Logo styling */
+.logo {
+  width: 60px;    /* Adjust size as needed */
+  height: auto;
+  margin-right: 20px;
+}
+/* Headings */
+h1 {
+  font-size: 40px;
+  font-family: Arial, sans-serif;
+  margin: 0;   /* Remove default spacing */
 }
 
-tr:nth-child(even) {
-  background-color: #f2f2f2;
+h2 {
+  font-size: 25px;
+  font-family: Arial, sans-serif;
+}
+
+h3 {
+  font-family: Arial, sans-serif;
+}
+
+p {
+  font-size: 14px;
+  font-family: Arial, sans-serif;
 }
