--- a/main.css
+++ b/main.css
@@ -1,35 +1,19 @@
-/* header {
-  display: flex;
-  align-items: center;
-  background-color: #2e8b57; /* Green background (SeaGreen) */
-  padding: 15px;
-  border-bottom: 2px solid #ddd;
-  color: white; /* Makes the text white for better contrast */
-}
-
-/* Logo styling */
-.logo {
-  width: 10px;    /* Adjust size as needed */
-  height: auto;
-  margin-right: 10px;
-}
-/* Headings */
 h1 {
-  font-size: 40px;
-  font-family: Arial, sans-serif;
-  margin: 0;   /* Remove default spacing */
+font-size: 40px;
+font-family: Arial
 }
-
 h2 {
-  font-size: 25px;
-  font-family: Arial, sans-serif;
+font-size: 25px;
+font-family: Arial
 }
-
 h3 {
-  font-family: Arial, sans-serif;
+font-family: Arial
 }
-
 p {
-  font-size: 14px;
-  font-family: Arial, sans-serif;
+font-size: 14px;
+font-family: Arial
+}
+div {
+background-color: darkcyan;
+text-align: right
 }
